Send mail using gopkg.in/gomail.v2

--- a/templates/AccountSummary.html
+++ b/templates/AccountSummary.html
@@ -6,9 +6,8 @@
     <title>Account Summary</title>
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Stori_Logo_2023.svg" ALT="stori-logo"
-    width="30%" height="10%"
-    />
+    <img src="cid:stori_logo.png" alt="Logo">
+
     <h1>Account Summary</h1>
 
     <p>Total balance is {{.TotalBalance}}</p>
